
  * [MESOS-8668] - Added support to libprocess for the Windows Thread Pool
    API, replacing libevent with the native Windows event and thread pool
    library. This can be enabled with `-DENABLE_LIBWINIO=ON` during CMake
    configuration. By utilizing I/O Completion Ports, this enables
    non-blocking asynchronous I/O on Windows for sockets, pipes, and files.

Additional API Changes:
  * Container logger module interface has been changed. The `prepare()` method
    now takes `ContainerID` and `ContainerConfig` instead.
  * `Isolator::recover` interface has been changed to take an `std::vector`
    instead of `std::list`.


Release Notes - Mesos - Version 1.6.2 (WIP)
-------------------------------------------
* This is a bug fix release.


Release Notes - Mesos - Version 1.6.1
-------------------------------------------
* This is a bug fix release.

** Bug
  * [MESOS-3790] - ZooKeeper connection should retry on `EAI_NONAME`.
  * [MESOS-8106] - Docker fetcher plugin unsupported scheme failure message is not accurate.
  * [MESOS-8786] - CgroupIsolatorProcess accesses subsystem processes directly.
  * [MESOS-8830] - Agent gc on old slave sandboxes could empty persistent volume data
  * [MESOS-8871] - Agent may fail to recover if the agent dies before image store cache checkpointed.
  * [MESOS-8904] - Master crash when removing quota.
  * [MESOS-8906] - `UriDiskProfileAdaptor` fails to update profile selectors.
  * [MESOS-8935] - Quota limit "chopping" can lead to cpu-only and memory-only offers.
  * [MESOS-8936] - Implement a Random Sorter for offer allocations.
  * [MESOS-8942] - Master streaming API does not send (health) check updates for tasks.
  * [MESOS-8945] - Master check failure due to CHECK_SOME(providerId).
  * [MESOS-8947] - Improve the container preparing logging in IOSwitchboard and volume/secret isolator.
  * [MESOS-8952] - process::await/collect n^2 performance issue.
  * [MESOS-8963] - Executor crash trying to print container ID.