@@ -341,10 +341,9 @@ void DRFSorter::update(
     const Resources& oldAllocation,
     const Resources& newAllocation)
 {
-  // TODO(bmahler): Check invariants between old and new allocations.
-  // Namely, the roles and quantities of resources should be the same!
-  // Otherwise, we need to ensure we re-calculate the shares, as
-  // is being currently done, for safety.
+  // TODO(bmahler): Check if the quantities of resources between the old and new
+  // allocations are the same. If not, we need to re-calculate the shares, as is
+  // being currently done, for safety.
 
   Node* current = CHECK_NOTNULL(find(clientPath));
 
